# iMPACT_montecarlo

./: Latch_reader1.v  README.md  SiPM_reader1.v  scintillator_reader1.v
simulazioni_articolo/: GateMaterials.db  simu_paper.cxx  simu_paper_1.mac  simu_paper_1_short.root  simu_paper_1_short_100.root  simu_paper_cxx.d  simu_paper_cxx_ACLiC_dict.cxx_tmp_4125  simu_paper_cxx_ACLiC_dict_rdict.pcm  single_event.cpp  single_event.h  single_event_cpp.d
simulazioni_articolo/monte/: CMakeLists.txt  main.cc
simulazioni_articolo/monte/include/: calorimeter.hh  event_dictionary.hh  fpga.hh
simulazioni_articolo/monte/src/: calorimeter.cc  event_dictionary.cc  fpga.cc
